base/istio/istio-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notebook
spec:
  hosts:
  - "*"
  gateways:
  - notebook-gateway
  http:
  - name: "oauth-api"
    match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: oauth
  - name: "notes-api"
    match:
    - uri:
        prefix: /note
    route:
    - destination:
        host: notes
  - name: "notes-app"
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: notes-app
